tests/src/snapshots/fe_compiler_tests__analysis__case_020_for_loop_with_continue.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/for_loop_with_continue.fe:5:9
  │
5 │         my_array[0] = 2
  │         ^^^^^^^^ attributes hash: 9322500749845443226
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 5,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:5:18
  │
5 │         my_array[0] = 2
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:5:9
  │
5 │         my_array[0] = 2
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:5:23
  │
5 │         my_array[0] = 2
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:6:9
  │
6 │         my_array[1] = 3
  │         ^^^^^^^^ attributes hash: 9322500749845443226
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 5,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:6:18
  │
6 │         my_array[1] = 3
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:6:9
  │
6 │         my_array[1] = 3
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:6:23
  │
6 │         my_array[1] = 3
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:7:9
  │
7 │         my_array[2] = 5
  │         ^^^^^^^^ attributes hash: 9322500749845443226
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 5,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:7:18
  │
7 │         my_array[2] = 5
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:7:9
  │
7 │         my_array[2] = 5
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:7:23
  │
7 │         my_array[2] = 5
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:8:9
  │
8 │         my_array[3] = 6
  │         ^^^^^^^^ attributes hash: 9322500749845443226
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 5,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:8:18
  │
8 │         my_array[3] = 6
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:8:9
  │
8 │         my_array[3] = 6
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:8:23
  │
8 │         my_array[3] = 6
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:9:9
  │
9 │         my_array[4] = 9
  │         ^^^^^^^^ attributes hash: 9322500749845443226
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 5,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:9:18
  │
9 │         my_array[4] = 9
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:9:9
  │
9 │         my_array[4] = 9
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/for_loop_with_continue.fe:9:23
  │
9 │         my_array[4] = 9
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/for_loop_with_continue.fe:10:21
   │
10 │         sum: u256 = 0
   │                     ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:11:18
   │
11 │         for i in my_array:
   │                  ^^^^^^^^ attributes hash: 9322500749845443226
   │
   = ExpressionAttributes {
         typ: Array(
             Array {
                 size: 5,
                 inner: Numeric(
                     U256,
                 ),
             },
         ),
         location: Memory,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:12:16
   │
12 │             if i % 2 == 0:
   │                ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:12:20
   │
12 │             if i % 2 == 0:
   │                    ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:12:16
   │
12 │             if i % 2 == 0:
   │                ^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:12:25
   │
12 │             if i % 2 == 0:
   │                         ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:12:16
   │
12 │             if i % 2 == 0:
   │                ^^^^^^^^^^ attributes hash: 10866140763116710699
   │
   = ExpressionAttributes {
         typ: Base(
             Bool,
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:14:13
   │
14 │             sum = sum + i
   │             ^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:14:19
   │
14 │             sum = sum + i
   │                   ^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:14:25
   │
14 │             sum = sum + i
   │                         ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:14:19
   │
14 │             sum = sum + i
   │                   ^^^^^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:15:16
   │
15 │         return sum
   │                ^^^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/for_loop_with_continue.fe:3:5
   │  
 3 │ ╭     pub def bar() -> u256:
 4 │ │         my_array: u256[5]
 5 │ │         my_array[0] = 2
 6 │ │         my_array[1] = 3
   · │
14 │ │             sum = sum + i
15 │ │         return sum
   │ ╰──────────────────^ attributes hash: 2041944711719443549
   │  
   = FunctionAttributes {
         is_public: true,
         name: "bar",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
  ┌─ features/for_loop_with_continue.fe:4:9
  │
4 │         my_array: u256[5]
  │         ^^^^^^^^^^^^^^^^^ attributes hash: 12285037458725956106
  │
  = Array(
        Array {
            size: 5,
            inner: Numeric(
                U256,
            ),
        },
    )

note: 
   ┌─ features/for_loop_with_continue.fe:10:9
   │
10 │         sum: u256 = 0
   │         ^^^^^^^^^^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )

note: 
   ┌─ features/for_loop_with_continue.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │ 
 3 │ │     pub def bar() -> u256:
 4 │ │         my_array: u256[5]
   · │
14 │ │             sum = sum + i
15 │ │         return sum
   │ ╰──────────────────^ attributes hash: 16417315723405128961
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "bar",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
         ],
         init_function: None,
         events: [],
         structs: [],
         external_contracts: [],
         created_contracts: {},
     }

note: 
  ┌─ features/for_loop_with_continue.fe:3:22
  │
3 │     pub def bar() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/for_loop_with_continue.fe:4:19
  │
4 │         my_array: u256[5]
  │                   ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/for_loop_with_continue.fe:4:19
  │
4 │         my_array: u256[5]
  │                   ^^^^^^^ attributes hash: 12285037458725956106
  │
  = Array(
        Array {
            size: 5,
            inner: Numeric(
                U256,
            ),
        },
    )

note: 
   ┌─ features/for_loop_with_continue.fe:10:14
   │
10 │         sum: u256 = 0
   │              ^^^^ attributes hash: 17942395924573474124
   │
   = Base(
         Numeric(
             U256,
         ),
     )


